--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,22 @@
+:root {
+    --site-main-color: #ba704f;
+    --site-secondary-color: #884a39;
+}
 
+body {
+    width: 100%;
+    height: 100vh;
+    margin: auto;
+}
+
+.app {
+    width: 100%;
+    height: 100vh;
+}
+
+.site-button-style {
+    padding: .5rem 1rem;
+    border: none;
+    border-radius: .5rem;
+    font-size: 1rem;
+}
