--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -1,4 +1,9 @@
 .home {
     width: 100%;
     height: 100%;
+    display: grid;
+    grid-template-columns: repeat(16, 1fr);
+    grid-template-rows: repeat(8, 1fr);
+    column-gap: 2rem;
+    background-color: var(--site-main-color);
 }
