--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import "https://unpkg.com/leaflet@1.9.4/dist/leaflet.css";
+
 :root {
     --site-main-color: #ba704f;
     --site-secondary-color: #884a39;
