--- a/src/components/nav/NavBar.module.css
+++ b/src/components/nav/NavBar.module.css
@@ -23,7 +23,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: center;
+    align-items: flex-end;
 }
 
 .navBarRight {
@@ -32,5 +32,5 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: center;
+    align-items: flex-end;
 }
